--- a/test.html
+++ b/test.html
@@ -6,7 +6,11 @@
 
 	<style>
 		canvas {
-			/*border: 1px solid black;*/
+			/*center*/
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translateX(-50%) translateY(-50%);
 		}
 		canvas:focus {
 			outline: none;
